[profile.release]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "crates/*",
    "asm",
    "tests",
    "tests-macros",
    "tools",
    "no-std",
    "crates/musli-web/examples/server",
    "crates/musli-web/examples/client",
    "crates/musli-web/examples/api",
]

default-members = [
    "crates/*",
    "asm",
    "tests",
    "tests-macros",
    "tools",
]
