[profile.release]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "crates/*",
    "asm",
    "tests",
    "tests-macros",
    "tools",
    "no-std"
]
default-members = [
    "crates/*",
    "asm",
    "tests",
    "tests-macros",
    "tools",
]

[patch.crates-io]
facet = { git = "https://github.com/facet-rs/facet" }
facet-json = { git = "https://github.com/facet-rs/facet" }