[package]
name = "no-std"
edition = "2021"
publish = false

[dependencies]
musli = { path = "../crates/musli", default-features = false }
musli-json = { path = "../crates/musli-json", default-features = false, features = ["parse-full"] }
musli-utils = { path = "../crates/musli-utils", default-features = false }

[target.'cfg(unix)'.dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features = ["mem"] }
