[package]
name = "no-std"
edition = "2021"
publish = false

[dependencies]
musli = { path = "../crates/musli", default-features = false, features = ["json", "parse-full"] }

[target.'cfg(unix)'.dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features = ["mem"] }
