[package]
name = "no-std"
edition = "2021"
publish = false

[dependencies]
musli = { path = "../crates/musli", default-features = false, features = ["json", "parse-full", "serde"] }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }

[target.'cfg(unix)'.dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features = ["mem"] }
