[package]
name = "tests"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["std", "alloc"]
std = ["musli?/std", "serde?/std", "musli-zerocopy?/std", "rand/std", "serde_json?/std", "rkyv?/std", "miniserde?/std"]
alloc = ["musli?/alloc", "musli-zerocopy?/alloc"]
verbose = ["musli?/verbose"]
extra = ["rkyv", "dlhn", "serde_cbor"]
full = ["rmp-serde", "bincode", "postcard", "musli-json", "serde_json", "bitcode", "bitcode-derive"]
text = ["musli-json", "serde_json"]
simdutf8 = ["musli?/simdutf8"]
parse-full = ["musli?/parse-full"]
musli-wire = ["musli/wire"]
musli-descriptive = ["musli/descriptive"]
musli-storage = ["musli/storage"]
musli-json = ["musli/json"]
musli-value = ["musli/value"]
musli-zerocopy = ["dep:musli-zerocopy"]
test = ["simdutf8", "musli-wire", "musli-storage", "musli-descriptive", "musli-json", "musli-value"]
# skips rt benchmarks
no-rt = []

no-usize = []
no-float = []
no-cstring = []
no-map = []
no-set = []
no-string-key = []
no-number-key = []
no-btree = []
no-vec = []
no-tuple = []
no-128 = []
# Maximum integer bound is limited to i64.
no-u64 = []
no-empty = []
no-newtype = []
no-string-set = []
no-nonunit-variant = []
no-char = []
no-binary-equality = []

serde = ["dep:serde", "bitcode?/serde"]
serde_json = ["dep:serde_json", "serde"]
bincode = ["dep:bincode", "serde"]
rmp-serde = ["dep:rmp-serde", "serde"]
postcard = ["dep:postcard", "serde"]
rkyv = ["dep:rkyv", "no-usize", "no-tuple", "no-cstring", "no-string-key", "no-string-set"]
bson = ["dep:bson", "serde", "no-128", "no-u64", "no-number-key", "no-empty", "no-newtype"]
serde_cbor = ["dep:serde_cbor", "serde", "no-128", "no-map"]
dlhn = ["dep:dlhn", "serde", "no-128", "no-map"]
bitcode = ["dep:bitcode", "serde"]
bitcode-derive = ["dep:bitcode", "bitcode?/derive", "no-cstring"]
miniserde = ["dep:miniserde", "alloc", "no-cstring", "no-btree", "no-map", "no-set", "no-nonunit-variant", "no-128", "no-char", "no-tuple", "no-binary-equality"]

[dependencies]
musli = { path = "../crates/musli", version = "0.0.122", default-features = false, optional = true, features = [] }
musli-zerocopy = { path = "../crates/musli-zerocopy", version = "0.0.122", default-features = false, features = [], optional = true }
tests-macros = { path = "../tests-macros" }

anyhow = "1.0.81"
serde = { version = "1.0.197", default-features = false, optional = true, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "std_rng"] }
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true }
serde_json = { version = "1.0.114", default-features = false, features = ["float_roundtrip"], optional = true }
serde_cbor = { version = "0.11.2", default-features = false, features = ["std"], optional = true }
dlhn = { version = "0.1.6", default-features = false, optional = true }
bitcode = { version = "0.6.0", default-features = false, optional = true }
rkyv = { version = "0.7.44", default-features = false, optional = true, features = ["size_32", "validation", "strict"] }
postcard = { version = "1.0.8",  default-features = false, optional = true }
bson = { version = "2.9.0", default-features = false, optional = true }
zerocopy = { version = "0.7.32", default-features = false, optional = true, features = ["byteorder", "derive"] }
miniserde = { version = "0.1.38", default-features = false, optional = true }

[dev-dependencies]
tests = { path = ".", features = ["test"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "comparison"
harness = false
