[package]
name = "tests"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
publish = false
autobenches = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "zerocopy"
harness = false

[features]
default = ["std", "alloc"]
std = ["musli?/std", "serde?/std", "musli-zerocopy?/std", "rand/std", "serde_json?/std", "rkyv?/std", "miniserde?/std", "epserde?/std", "bincode?/std"]
alloc = ["musli?/alloc", "musli-zerocopy?/alloc", "bincode?/alloc"]
verbose = ["musli?/verbose"]
extra = ["rkyv", "dlhn", "serde_cbor"]
full = ["rmp-serde", "bincode-serde", "bincode-derive", "postcard", "musli-json", "serde_json", "bitcode", "bitcode-derive"]
text = ["musli-json", "serde_json"]
simdutf8 = ["musli?/simdutf8"]
parse-full = ["musli?/parse-full"]
musli-wire = ["musli/wire"]
musli-descriptive = ["musli/descriptive"]
musli-storage = ["musli/storage"]
musli-packed = ["musli/storage"]
musli-json = ["musli/json"]
musli-value = ["musli/value"]
musli-zerocopy = ["dep:musli-zerocopy"]
test = ["simdutf8", "musli-wire", "musli-storage", "musli-packed", "musli-descriptive", "musli-json", "musli-value"]
# skips rt benchmarks
no-rt = []

no-usize = ["no-isize"]
no-isize = []
no-float = []
no-cstring = []
no-map = []
no-set = []
no-string-key = []
no-number-key = []
no-btree = []
no-vec = []
no-tuple = []
no-128 = []
# Maximum integer bound is limited to i64.
no-u64 = []
no-empty = []
no-string-set = []
no-nonunit-variant = []
no-char = []
no-binary-equality = []

serde = ["dep:serde", "bitcode?/serde"]
epserde = ["dep:epserde"]
serde_json = ["dep:serde_json", "serde"]
bincode-serde = ["dep:bincode", "serde"]
bincode-derive = ["dep:bincode", "bincode?/derive"]
rmp-serde = ["dep:rmp-serde", "serde"]
postcard = ["dep:postcard", "serde"]
rkyv = ["dep:rkyv", "no-usize", "no-tuple", "no-cstring", "no-map", "no-set"]
bson = ["dep:bson", "serde", "no-128", "no-u64", "no-number-key", "no-empty"]
serde_cbor = ["dep:serde_cbor", "serde", "no-128", "no-map"]
dlhn = ["dep:dlhn", "serde", "no-128", "no-map"]
bitcode = ["dep:bitcode", "serde"]
bitcode-derive = ["dep:bitcode", "bitcode?/derive", "no-cstring"]
miniserde = ["dep:miniserde", "alloc", "no-cstring", "no-btree", "no-map", "no-set", "no-nonunit-variant", "no-128", "no-char", "no-tuple", "no-binary-equality"]
speedy = ["dep:speedy", "no-isize", "no-cstring"]

[dependencies]
musli = { path = "../crates/musli", version = "0.0.127", default-features = false, optional = true, features = [] }
musli-zerocopy = { path = "../crates/musli-zerocopy", version = "0.0.127", default-features = false, features = [], optional = true }
tests-macros = { path = "../tests-macros" }

anyhow = "1.0.81"
serde = { version = "1.0.197", default-features = false, optional = true, features = ["derive"] }
rand = { version = "0.9.0", default-features = false, features = ["alloc", "std_rng"] }
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "2.0.1", default-features = false, optional = true, features = ["serde"] }
serde_json = { version = "1.0.114", default-features = false, features = ["float_roundtrip"], optional = true }
serde_cbor = { version = "0.11.2", default-features = false, features = ["std"], optional = true }
dlhn = { version = "0.1.6", default-features = false, optional = true }
bitcode = { version = "0.6.0", default-features = false, optional = true, features = ["std"] }
rkyv = { version = "0.8.9", default-features = false, optional = true, features = ["bytecheck"] }
postcard = { version = "1.0.8",  default-features = false, optional = true }
bson = { version = "2.14.0", default-features = false, optional = true }
zerocopy = { version = "0.8.13", default-features = false, optional = true, features = ["derive"] }
miniserde = { version = "0.1.38", default-features = false, optional = true }
speedy = { version = "0.8.7", optional = true }
epserde = { version = "0.8.0", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
