[package]
name = "tools"
edition = "2021"
publish = false

[features]
default = ["alloc"]
alloc = []

no-empty = []
no-nonunit-variant = []

[dependencies]
tests = { path = "../tests" }

anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.12"
sysinfo = "0.33.1"
criterion = { version = "0.6.0", features = ["html_reports"] }
