[package]
name = "tools"
edition = "2024"
publish = false

[features]
default = ["alloc"]
alloc = []

no-empty = []
no-nonunit-variant = []

[dependencies]
tests = { path = "../tests" }

anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.9.10"
sysinfo = "0.37.2"
criterion = { version = "0.8.1", features = ["html_reports"] }
