[package]
name = "asm"
edition = "2021"
publish = false
description = """
Helper project to disassemble serialization.
"""

[features]
musli-zerocopy = ["dep:musli-zerocopy", "tests/musli-zerocopy"]
zerocopy = ["dep:zerocopy", "tests/zerocopy"]

[dependencies]
tests = { path = "../tests", default-features = false, features = ["std"] }

musli-zerocopy = { path = "../musli-zerocopy", optional = true }
zerocopy = { version = "0.7.32", default-features = false, optional = true, features = ["byteorder", "derive"] }
