[package]
name = "musli-allocator"
version = "0.0.98"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = """
Allocators for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["memory-management", "no-std", "no-std::no-alloc", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc"]
std = ["musli/std"]
alloc = ["musli/alloc"]

[dependencies]
musli = { path = "../musli", version = "0.0.98", default-features = false }
