[package]
name = "musli-common"
version = "0.0.49"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.73"
description = """
Common utilities shared among Müsli encodings.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT/Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding"]

[features]
default = ["std"]
std = ["musli/std", "simdutf8?/std"]
alloc = []

[dependencies]
musli = { path = "../musli", version = "0.0.49", default-features = false }
simdutf8 = { version = "0.1.4", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8.5"
