[package]
name = "musli-common"
version = "0.0.96"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Common utilities shared among Müsli encodings.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std"]

[features]
default = ["std"]
std = ["alloc", "musli/std", "simdutf8?/std", "musli-allocator/std"]
alloc = ["musli-allocator/alloc"]

[dependencies]
musli = { path = "../musli", version = "0.0.96", default-features = false }
musli-allocator = { path = "../musli-allocator", version = "0.0.96", default-features = false }
simdutf8 = { version = "0.1.4", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8.5"
