[package]
name = "musli-core"
version = "0.0.119"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Core traits and types for the Müsli serialization framework.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc"]
std = []
alloc = []
verbose = ["musli-macros/verbose"]

[dependencies]
musli-macros = { version = "=0.0.119", path = "../musli-macros" }

[dev-dependencies]
musli = { version = "=0.0.119", path = "../musli" }
