[package]
name = "musli-core"
version = "0.1.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2024"
rust-version = "1.85"
description = """
Core traits and types for the Müsli serialization framework.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[features]
default = ["std", "alloc"]
std = []
alloc = []
verbose = ["musli-macros/verbose"]
garde = ["dep:garde"]

[dependencies]
musli-macros = { version = "0.1.4", path = "../musli-macros", default-features = false }
garde = { version = "0.22.0", optional = true, default-features = false }

# Note that musli-macros is tightly coupled with the version of musli-core used.
# Never add this as a dependency directly. This section cannot be enabled and
# ensures that the musli-macros dependency used exactly matches the version of
# musli-core.
#
# See https://github.com/serde-rs/serde/blob/master/serde/Cargo.toml
[target.'cfg(any())'.dependencies]
musli-macros = { version = "=0.1.4", path = "../musli-macros" }

[dev-dependencies]
musli = { version = "=0.0.149", path = "../musli", features = ["json"] }
