[package]
name = "musli-descriptive"
version = "0.0.96"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
A fully self-descriptive format for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no-std::no-alloc", "no_std", "serialization"]
categories = ["encoding", "no-std"]

[features]
default = ["std", "simdutf8"]
std = ["alloc", "musli/std", "musli-common/std", "musli-storage/std"]
alloc = ["musli/alloc", "musli-common/alloc", "musli-storage/alloc"]
test = []
simdutf8 = ["musli-common/simdutf8"]

[dependencies]
musli = { path = "../musli", version = "0.0.96", default-features = false }
musli-common = { path = "../musli-common", version = "0.0.96", default-features = false }
musli-storage = { path = "../musli-storage", version = "0.0.96", default-features = false }
