[package]
name = "musli-descriptive"
version = "0.0.107"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
A fully self-descriptive format for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc", "simdutf8", "musli-value"]
std = ["musli/std", "musli-common/std", "musli-storage/std", "musli-value?/std"]
alloc = ["musli/alloc", "musli-common/alloc", "musli-storage/alloc", "musli-value?/alloc"]
test = []
simdutf8 = ["musli-common/simdutf8"]

[dependencies]
musli = { path = "../musli", version = "0.0.107", default-features = false }
musli-common = { path = "../musli-common", version = "0.0.107", default-features = false }
musli-storage = { path = "../musli-storage", version = "0.0.107", default-features = false }
musli-value = { path = "../musli-value", version = "0.0.107", default-features = false, optional = true }
