[package]
name = "musli-descriptive"
version = "0.0.114"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
A fully self-descriptive format for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc", "simdutf8", "musli-value"]
std = ["musli/std", "musli-utils/std", "musli-storage/std", "musli-value?/std", "simdutf8?/std"]
alloc = ["musli/alloc", "musli-utils/alloc", "musli-storage/alloc", "musli-value?/alloc"]
test = ["musli-value"]
simdutf8 = ["dep:simdutf8"]

[dependencies]
musli = { path = "../musli", version = "0.0.114", default-features = false }
musli-utils = { path = "../musli-utils", version = "0.0.114", default-features = false }
musli-storage = { path = "../musli-storage", version = "0.0.114", default-features = false }
musli-value = { path = "../musli-value", version = "0.0.114", default-features = false, optional = true }
simdutf8 = { version = "0.1.4", optional = true, default-features = false }
