[package]
name = "musli-json"
version = "0.0.49"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.66"
description = """
JSON support for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT/Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding"]

[features]
default = ["std", "simdutf8", "arrayvec", "musli-value", "parse-full"]
std = ["musli/std", "musli-common/std", "musli-value?/std", "alloc", "lexical/std"]
alloc = ["musli/alloc", "musli-common/alloc", "musli-value?/alloc"]
test = []
simdutf8 = ["musli-common/simdutf8"]
arrayvec = ["musli-common/arrayvec"]
parse-full = []

[dependencies]
musli = { path = "../musli", version = "0.0.49", default-features = false }
musli-common = { path = "../musli-common", version = "0.0.49", default-features = false }
musli-value = { path = "../musli-value", version = "0.0.49", default-features = false, optional = true }

itoa = "1.0.6"
ryu = "1.0.13"
lexical = { version = "6.1.1", default-features = false, features = ["parse-floats", "std"] }

[dev-dependencies]
rand = "0.8.5"
