[package]
name = "musli-json"
version = "0.0.91"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.73"
description = """
JSON support for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding"]

[features]
default = ["std", "simdutf8", "musli-value", "parse-full"]
std = ["musli/std", "musli-common/std", "musli-value?/std", "alloc", "lexical/std"]
alloc = ["musli/alloc", "musli-common/alloc", "musli-value?/alloc"]
test = []
simdutf8 = ["musli-common/simdutf8"]
parse-full = []

[dependencies]
musli = { path = "../musli", version = "0.0.91", default-features = false }
musli-common = { path = "../musli-common", version = "0.0.91", default-features = false }
musli-value = { path = "../musli-value", version = "0.0.91", default-features = false, optional = true }

itoa = "1.0.9"
ryu = "1.0.15"
lexical = { version = "6.1.1", default-features = false, features = ["parse-floats"] }

[dev-dependencies]
rand = "0.8.5"
