[package]
name = "musli-json"
version = "0.0.113"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
JSON support for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc", "simdutf8", "musli-value", "parse-full"]
std = ["musli/std", "musli-utils/std", "musli-value?/std", "alloc", "lexical/std", "simdutf8?/std"]
alloc = ["musli/alloc", "musli-utils/alloc", "musli-value?/alloc"]
test = ["musli-value"]
simdutf8 = ["dep:simdutf8"]
parse-full = []

[dependencies]
musli = { path = "../musli", version = "0.0.113", default-features = false }
musli-utils = { path = "../musli-utils", version = "0.0.113", default-features = false }
musli-value = { path = "../musli-value", version = "0.0.113", default-features = false, optional = true }

itoa = "1.0.10"
ryu = "1.0.17"
lexical = { version = "6.1.1", default-features = false, features = ["parse-floats"] }
simdutf8 = { version = "0.1.4", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8.5"
