[package]
name = "musli-macros"
version = "0.0.102"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Macros for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[lib]
proc-macro = true
path = "src/lib.rs"

[features]
test = []

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
